--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
     "nodejs",
     "express"
   ],
-  "author": "RAEA",
+  "author": "PiattaformeTeam",
   "license": "MIT",
   "homepage": "https://bitbucket.org/androiarch/iello-api#readme",
   "dependencies": {
     "express": "^4.16.2",
     "express-joi-validation": "^0.1.0",
-    "express-joi-validator": "^2.0.0",
-    "express-validation": "^1.0.2",
     "firebase-admin": "^5.4.2",
     "uuid": "^3.1.0"
   }
