Aggiunti header per ogni file

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-joi-validation": "^0.1.0",
-    "firebase-admin": "^5.4.2",
+    "firebase-admin": "^5.4.3",
+    "joi": "^13.0.1",
     "uuid": "^3.1.0"
   }
 }
